--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -24,6 +24,10 @@ Depends:
     rgeos,
     sp,
     tripack,
-    raster
+    raster,
+    lidR
 LinkingTo: Rcpp
 RoxygenNote: 6.0.1
+Suggests: knitr,
+    rmarkdown
+VignetteBuilder: knitr
