Cleaned dependency handling and added some functions
* now all required packages are listed in DESCRIPTION under Imports, except for data.table which has to be under Depends for some functions to work properly
* new wrapper for the MeanShift functions called apply_MeanShift for which parallelization is now optional not mandatory; will replace parallel_MeanShift
* new functions for filtering crown overlaps and stem returns
* two versions of filter_CrownOverlaps have to be tested and compared on large scales

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -16,8 +16,9 @@ Description: The package allows individual tree crown delineation (ITCD) from
 License: GPL-3
 LazyData: TRUE
 Depends:
+    data.table
+Imports:
     cluster,
-    data.table,
     pbapply,
     plyr,
     Rcpp (>= 0.12.9),
@@ -26,4 +27,4 @@ Depends:
     tripack,
     raster
 LinkingTo: Rcpp
-RoxygenNote: 6.0.1
+RoxygenNote: 6.1.1
